# LoRaFlexSim-2

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_DEBUG.md  README_FIGURES.md  RUNBOOK_OFFLINE.md  SECURITY.md  VALIDATION.md  VALIDATION_TRAFFIC_EXP.md  execution_notes.md  plot_RL10_reward_vs_pdr_scatter.py  plot_defaults.py  plots.py  pyproject.toml  requirements.txt
.github/: README.md
IWCMC/: README.md  overlay_iwcmc_figures.py
article_c/: README.md
config/: README.md
docker/: Dockerfile  README.md
docs/: README.md  VALIDATION.md  advanced_workflows.md  architecture_bandit_sf_decision.md  dashboard_export.md  energy_profiles.md  installation.md  jamming_campaigns.md  jamming_commands.txt  language_migration_status.md  migration_pretest_campagne.md  repository_map.md  test_plan.md  ui-label-charter.md  user_entrypoints_inventory.md  user_guide_cli.md  user_guide_dashboard.md
examples/: README.md  analyse_resultats.py  plot_energy.py  plot_sf_distribution.py
experiments/: README.md  calibration_snir_profiles.yaml  default.yaml  paper_core.yaml  paper_fast.yaml
figures/: README.md
final/: README.md
flora-master/: README.md
loraflexsim/: README.md  __init__.py  __main__.py  cli.py  run.py
loraflexsim_legacy/: __init__.py
mobile-sfrd_th/: README.md
mobilesfrdth/: __init__.py  __main__.py  cli.py  config.py  presets.py  scenarios.py
numpy_stub/: README.md  __init__.py
plots/: README.md
pretest_campagne/: README.md  __init__.py  paths.py
qos_cli/: README.md  lfs_plots.py  lfs_plots_scatter.py  lfs_plots_surfaces.py
results/: README.md
scipy/: README.md
scripts/: README.md  aggregate_jamming_results.py  bootstrap_unix.sh  bootstrap_windows.ps1  calibrate_snir_trend.py  check_docs_consistency.py  check_english_docs.py  check_english_surface.py  clean_jamming_results.py  loraflexsim.ps1  loraflexsim.sh  mobilesfrdth.ps1  mobilesfrdth.sh  plot_battery_tracking.py  plot_channels_sweep.py  plot_interval_sweep.py  plot_mobility_latency_energy.py  plot_mobility_models.py  plot_mobility_multichannel.py  plot_node_positions.py  plot_noise_sweep.py  plot_sf_vs_scenario.py  plot_step1_comparison.py  plot_step1_extended_qos.py  plot_step1_results.py  plot_step2_comparison.py  plot_theme.py  qos_cluster_plots.py  run_campaign_profiles.ps1  run_campaign_profiles.sh  run_ci_pipeline.sh  run_grid.ps1  run_grid.sh  run_jamming_campaign.py  run_offline.sh  run_qos_cluster_pipeline.py  run_step1_experiments.py  run_step1_matrix_windows.ps1  simulate_mobility_vs_static.py  validate_article_consistency.py  (+3 more)
sfrd/: README.md
src/: README.md
tests/: README.md  (+38 more)
(+354 files in other folders)
