[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mobilesfrdth"
version = "1.0.1"
description = "Package Python officiel de LoRaFlexSim pour exécuter des campagnes reproductibles via la CLI mobilesfrdth"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [{name = "François d'Assise Sanou"}]


# Dependencies from requirements.txt
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "plotly>=5.4",
  "panel>=0.13",
  "fastapi>=0.88",
  "uvicorn>=0.20",
  "Pillow>=10.0",
  "PyYAML>=6.0"
]

[project.scripts]
mobilesfrdth = "mobilesfrdth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mobilesfrdth*"]
exclude = ["tests*"]
